# aurora3d

./: .gitignore  README.md  aurora.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
tests/: test_aurora.py
